fixing hover z-index bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,7 @@
   top: 0;
   z-index: 1039 !important;
 }
+
+.sidebar-mini.sidebar-collapse .main-sidebar.sidebar-focused, .sidebar-mini.sidebar-collapse .main-sidebar:hover {
+  z-index: 1040;
+}
